# backup-utility

./: .gitignore  Main.hs  README.md  backup-util.cabal  build-and-apply
CommandLine/: CommandLine.hs
DirProcessing/: DirProcessing.hs
Logging/: Logging.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
